03-k8s-clusters/aws/overlays/external-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: platform-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  gatewayClassName: alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: external-alb
  listeners:
    - name: http-sonhs
      hostname: sonhs.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: http-wildcard
      hostname: "*.sonhs.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-sonhs
      hostname: sonhs.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wildcard
      hostname: "*.sonhs.com"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
